# AI_data_process

./: .gitignore  README.md  data_process.py  example.py  plugin.py  pyproject.toml
src/: __init__.py
src/aidata/: __init__.py
src/aidata/data_process/: __init__.py  processor.py
src/aidata/plugins/: __init__.py  data_enricher.py  field_extractor.py  passthrough.py  score_filter.py  text_length_filter.py
src/data_process/: processor.py
src/plugins/: data_enricher.py  field_extractor.py  passthrough.py  plugin.py  score_filter.py  text_length_filter.py
tests/: run_tests.sh  test_large_scale.py  test_unit.py
